manifests/openhab/influxdb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb
spec:
  ingressClassName: nginx
  rules:
  - host: influxdb.cluster.hlnr.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: influxdb
            port:
              name: http
